pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-force-ssl-redirect-no-tls.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-force-ssl-redirect-no-tls
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: forcesslredirectnotls.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
